--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             </button>
             <ul id="show_menu" class="menu__list">
                 <li class="menu__item">Личный кабинет</li>
-                <li class="menu__item menu__active">Платежи (активная)</li>
+                <li class="menu__item menu__active">Платежи <span>(активная)</span></li>
                 <li class="menu__item">История платежей</li>
                 <li class="menu__item">Настройки</li>
                 <li class="menu__item">Выйти</li>
